# llm_dataset_builder

./: .env.example  .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md
.github/workflows/: release.yml  rust.yml
docs/: DocumentStrategy.md  ImplementationPlan.md
src/: config.rs  datasource.rs  lib.rs  main.rs  processor.rs
src/graph/: document_graph.rs  edge.rs  error.rs  mod.rs  node.rs  store.rs
src/parser/: mod.rs
tests/: integration_test.rs  processor_test.rs
tests/data/: test.md  test_qa.jsonl
