[package]
name = "llm_dataset_builder"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
url = "2.5"
futures = "0.3"
async-trait = "0.1"
regex = "1.10"
walkdir = "2.4"
dotenv = "0.15"

[dev-dependencies]
mockall = "0.11"
tempfile = "3.8"
assert_fs = "1.0"
predicates = "3.0"
cargo-tarpaulin = "0.18.0-alpha3"
